# ZMQ_Project-1

./: CMakeLists.txt  README.md  publisher.cpp  run.sh  run_router_dealer.sh  subscriber.cpp
arduino/: read_bytes.ino
client/: CMakeLists.txt  main.cpp
error/: CMakeLists.txt
include/: utilities.h
lib/: CMakeLists.txt
lib/include/: utilities.h
manager/: CMakeLists.txt  main.cpp
monitor/: CMakeLists.txt  main.cpp
protobuf/: CMakeLists.txt  messages.proto
python_scripts/: serial_test_2.py
router_dealer/: CMakeLists.txt  broker.cpp  client.cpp  worker.cpp
server/: CMakeLists.txt  game_server.cc  main.cpp  snake.cc
server/include/: .game_server.h.swp  game_server.h  snake.h
